--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name=".NetInfo"
             android:label="@string/app_name" />
         
+        <activity
+            android:name=".SysInfo"
+            android:label="@string/app_name" />
+        
     </application>
 
 </manifest>
