--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="16" />
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -23,6 +23,14 @@
         
         <activity
             android:name=".DiskInfo"
+            android:label="@string/app_name" />
+        
+        <activity 
+            android:name="snake.game.Snake"
+            android:label="@string/app_name" />
+        
+        <activity 
+            android:name="snake.game.SnakeView"
             android:label="@string/app_name" />
         
         <activity 
